compiler/testData/diagnostics/tests/enum/enumWithAnnotationKeyword.kt
// FIR_IDENTICAL
<!WRONG_MODIFIER_TARGET!>annotation<!> enum class E {
    D
}